--- a/Project/Views/Planets/Add.cshtml
+++ b/Project/Views/Planets/Add.cshtml
@@ -56,6 +56,7 @@
                         <option value="@Planetarysystem.Id">@Planetarysystem.Name</option>
                     }
                 </select>
+                <span asp-validation-for="PlanetarySystemId" class="small text-danger"></span>
             </div>
             <input class="btn btn-primary" type="submit" value="Save" />
         </form>
