--- a/Project/Views/Home/Index.cshtml
+++ b/Project/Views/Home/Index.cshtml
@@ -1,8 +1,82 @@
-﻿@{
+﻿@model IndexViewModel
+
+@{
     ViewData["Title"] = "Space Initiatives";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+@{
+    var planets = Model.Planets;
+    var firstPlanet = planets.Any() ? planets[0] : null;
+    var secondPlanet = planets.Count > 1 ? planets[1] : null;
+    var thirdPlanet = planets.Count > 2 ? planets[2] : null;
+}
+
+@if (!planets.Any())
+{
+    <div class="jumbotron">
+        <h1 class="display-4">Welcome to Space Initiative!</h1>
+        <p class="lead">There are no planets in the system, you may add one!</p>
+        <hr class="my-4">
+        <p class="lead">
+            <a asp-controller="Planets" asp-action="Add" class="btn btn-primary btn-lg" role="button">Add Planet</a>
+        </p>
+    </div>
+}
+
+<div class="mb-5"></div>
+
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+        @if (firstPlanet != null)
+        {
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="@firstPlanet.ImageUrl" alt="@firstPlanet.Name">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5><a class="btn btn-primary" asp-controller="Planets" asp-action="Analysis" asp-route-id="@firstPlanet.Id">@firstPlanet.Name</a></h5>
+                </div>
+            </div>
+        }
+        @if (secondPlanet != null)
+        {
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="@secondPlanet.ImageUrl" alt="@secondPlanet.Name">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5><a class="btn btn-primary" asp-controller="Planets" asp-action="Analysis" asp-route-id="@secondPlanet.Id">@secondPlanet.Name</a></h5>
+                </div>
+            </div>
+        }
+        @if (thirdPlanet != null)
+        {
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="@thirdPlanet.ImageUrl" alt="@thirdPlanet.Name">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5><a class="btn btn-primary" asp-controller="Planets" asp-action="Analysis" asp-route-id="@thirdPlanet.Id">@thirdPlanet.Name</a></h5>
+                </div>
+            </div>
+        }
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+
+<div class="mb-5"></div>
+
+<div class="jumbotron">
+    <div class="row">
+        <h2 class="col-md-4">
+            @Model.TotalPlanets Planets
+        </h2>
+        <h2 class="col-md-4">
+            @Model.TotalUsers Users
+        </h2>
+        <h2 class="col-md-4">
+            @Model.TotalMisions Misions
+        </h2>
+    </div>
 </div>
