--- a/Project/Views/Planets/Add.cshtml
+++ b/Project/Views/Planets/Add.cshtml
@@ -10,37 +10,37 @@
         <form method="post">
             <div class="form-group">
                 <label asp-for="Name"></label>
-                <input asp-for="Name" class="form-control" placeholder="Earth">
+                <input asp-for="Name" class="form-control" placeholder="Habitat 7">
                 <span asp-validation-for="Name" class="small text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="OrbitalDistance"></label>
-                <input asp-for="OrbitalDistance" class="form-control" placeholder="1 AU">
+                <input asp-for="OrbitalDistance" class="form-control" placeholder="2.3 AU">
                 <span asp-validation-for="OrbitalDistance" class="small text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="OrbitalPeriod"></label>
-                <input asp-for="OrbitalPeriod" class="form-control" placeholder="1 Earth Year">
+                <input asp-for="OrbitalPeriod" class="form-control" placeholder="3.1 years">
                 <span asp-validation-for="OrbitalPeriod" class="small text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Radius"></label>
-                <input asp-for="Radius" class="form-control" placeholder="6378 km">
+                <input asp-for="Radius" class="form-control" placeholder="4912 km">
                 <span asp-validation-for="Radius" class="small text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="AtmosphericPressure"></label>
-                <input asp-for="AtmosphericPressure" class="form-control" placeholder="1 Earth Atmosphere">
+                <input asp-for="AtmosphericPressure" class="form-control" placeholder="2.3 atmospheres">
                 <span asp-validation-for="AtmosphericPressure" class="small text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="SurfaceTemperature"></label>
-                <input asp-for="SurfaceTemperature" class="form-control" placeholder="23 Celsius">
+                <input asp-for="SurfaceTemperature" class="form-control" placeholder="17C">
                 <span asp-validation-for="SurfaceTemperature" class="small text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Analysis"></label>
-                <textarea asp-for="Analysis" rows="4" class="form-control" placeholder="Earth is the homeworld and capital of humanity. Located in the Milky Way galaxy, it is the third planet of the Sol system."></textarea>
+                <textarea asp-for="Analysis" rows="4" class="form-control" placeholder="The planet's atmsphere is largely argon-nitrogen."></textarea>
                 <span asp-validation-for="Analysis" class="small text-danger"></span>
             </div>
             <div class="form-group">
