--- a/Project/Views/_ViewImports.cshtml
+++ b/Project/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Project
 @using Project.Models
 @using Project.Models.Planets
+@using Project.Models.Home
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
