--- a/Project/Views/Planets/Add.cshtml
+++ b/Project/Views/Planets/Add.cshtml
@@ -6,7 +6,7 @@
 
 <div class="row">
     <div class="col-sm-12 offset-lg-2 col-lg8 offset-xl-3 col-xl-6">
-        <h2 class="heading-margin text-center">Add Car</h2>
+        <h2 class="heading-margin text-center">Add Planet</h2>
         <form method="post">
             <div class="form-group">
                 <label asp-for="Name"></label>
