--- a/Project/Views/Home/Index.cshtml
+++ b/Project/Views/Home/Index.cshtml
@@ -4,14 +4,7 @@
     ViewData["Title"] = "Space Initiatives";
 }
 
-@{
-    var planets = Model.Planets;
-    var firstPlanet = planets.Any() ? planets[0] : null;
-    var secondPlanet = planets.Count > 1 ? planets[1] : null;
-    var thirdPlanet = planets.Count > 2 ? planets[2] : null;
-}
-
-@if (!planets.Any())
+@if (!Model.Planets.Any())
 {
     <div class="jumbotron">
         <h1 class="display-4">Welcome to Space Initiative!</h1>
@@ -27,30 +20,13 @@
 
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
-        @if (firstPlanet != null)
+        @for (int i = 0; i < Model.Planets.Count; i++)
         {
-            <div class="carousel-item active">
-                <img class="d-block w-100" src="@firstPlanet.ImageUrl" alt="@firstPlanet.Name">
+            var planet = Model.Planets[i];
+            <div class="carousel-item @(i == 0 ? "active" : string.Empty)">
+                <img class="d-block w-100" src="@planet.ImageUrl" alt="@planet.Name">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5><a class="btn btn-primary" asp-controller="Planets" asp-action="Analysis" asp-route-id="@firstPlanet.Id">@firstPlanet.Name</a></h5>
-                </div>
-            </div>
-        }
-        @if (secondPlanet != null)
-        {
-            <div class="carousel-item active">
-                <img class="d-block w-100" src="@secondPlanet.ImageUrl" alt="@secondPlanet.Name">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5><a class="btn btn-primary" asp-controller="Planets" asp-action="Analysis" asp-route-id="@secondPlanet.Id">@secondPlanet.Name</a></h5>
-                </div>
-            </div>
-        }
-        @if (thirdPlanet != null)
-        {
-            <div class="carousel-item active">
-                <img class="d-block w-100" src="@thirdPlanet.ImageUrl" alt="@thirdPlanet.Name">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5><a class="btn btn-primary" asp-controller="Planets" asp-action="Analysis" asp-route-id="@thirdPlanet.Id">@thirdPlanet.Name</a></h5>
+                    <h5><a class="btn btn-primary" asp-controller="Cars" asp-action="Details" asp-route-id="@planet.Id">@planet.Name</a></h5>
                 </div>
             </div>
         }
