--- a/Project/Views/Shared/_Layout.cshtml
+++ b/Project/Views/Shared/_Layout.cshtml
@@ -19,6 +19,9 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="PlanetarySystems" asp-action="Add">Add Planetary System</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Planets" asp-action="Add">Add Planet</a>
                         </li>
                         <li class="nav-item">
@@ -38,7 +41,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; @DateTime.UtcNow.Year - Project 
+            &copy; @DateTime.UtcNow.Year - Project
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
