--- a/Project/Views/_ViewImports.cshtml
+++ b/Project/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using Project.Models
 @using Project.Models.Planets
 @using Project.Models.Home
+@using Project.Models.PlanetarySystems
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
