--- a/Project/Views/Shared/_Layout.cshtml
+++ b/Project/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Planets" asp-action="Add">Add Planet</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Moons" asp-action="Add">Add Moon</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Planets" asp-action="All">All Planet</a>
                         </li>
                     </ul>
