--- a/Project/Views/_ViewImports.cshtml
+++ b/Project/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using Project.Models.Planets
 @using Project.Models.Home
 @using Project.Models.PlanetarySystems
+@using Project.Models.Moons
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
