Introduced creators table

--- a/Project/Views/PlanetarySystems/Add.cshtml
+++ b/Project/Views/PlanetarySystems/Add.cshtml
@@ -6,14 +6,15 @@
 
 <div class="row">
     <div class="col-sm-12 offset-lg-2 col-lg8 offset-xl-3 col-xl-6">
-        <h2 class="heading-margin text-center">Add Planetary System</h2>
+        <h2 class="heading-margin text-center">Create Planetary System</h2>
+        <h4 class="heading-margin text-center">Tutorial: First you need to create Planetary System after that you can make Planets and you may add some Moons to them.</h4>
         <form method="post">
             <div class="form-group">
                 <label asp-for="Name"></label>
                 <input asp-for="Name" class="form-control" placeholder="Sol">
                 <span asp-validation-for="Name" class="small text-danger"></span>
             </div>
-            <input class="btn btn-primary" type="submit" value="Save" />
+            <input class="btn btn-primary" type="submit" value="Create" />
         </form>
     </div>
 </div>
