--- a/Project/Views/Shared/_Layout.cshtml
+++ b/Project/Views/Shared/_Layout.cshtml
@@ -19,13 +19,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="PlanetarySystems" asp-action="Add">Add Planetary System</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="PlanetarySystems" asp-action="Add">Create Planetary System</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Planets" asp-action="Add">Add Planet</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Planets" asp-action="Add">Create Planet</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Moons" asp-action="Add">Add Moon</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Moons" asp-action="Add">Create Moon</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Planets" asp-action="All">All Planet</a>
