--- a/Project/Views/Home/Index.cshtml
+++ b/Project/Views/Home/Index.cshtml
@@ -4,14 +4,26 @@
     ViewData["Title"] = "Space Initiatives";
 }
 
-@if (!Model.Planets.Any())
+@if (!Model.PlanetarySystems.Any())
 {
     <div class="jumbotron">
         <h1 class="display-4">Welcome to Space Initiative!</h1>
-        <p class="lead">There are no planets in the system, you may add one!</p>
+        <p class="lead">There are no Planetary Systems, you may create one!</p>
         <hr class="my-4">
         <p class="lead">
-            <a asp-controller="Planets" asp-action="Add" class="btn btn-primary btn-lg" role="button">Add Planet</a>
+            <a asp-controller="PlanetarySystems" asp-action="Add" class="btn btn-primary btn-lg" role="button">Create Planetary System</a>
+        </p>
+    </div>
+}
+
+@if (Model.PlanetarySystems.Any() && !Model.Planets.Any())
+{
+    <div class="jumbotron">
+        <h1 class="display-4">Welcome to Space Initiative!</h1>
+        <p class="lead">There are no Planets in the Planetary System, you may create one!</p>
+        <hr class="my-4">
+        <p class="lead">
+            <a asp-controller="Planets" asp-action="Add" class="btn btn-primary btn-lg" role="button">Create Planet</a>
         </p>
     </div>
 }
