--- a/Project/Views/Moons/Add.cshtml
+++ b/Project/Views/Moons/Add.cshtml
@@ -6,7 +6,7 @@
 
 <div class="row">
     <div class="col-sm-12 offset-lg-2 col-lg8 offset-xl-3 col-xl-6">
-        <h2 class="heading-margin text-center">Add Moon</h2>
+        <h2 class="heading-margin text-center">Create Moon</h2>
         <form method="post">
             <div class="form-group">
                 <label asp-for="Name"></label>
@@ -20,7 +20,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="OrbitalPeriod"></label>
-                <input asp-for="OrbitalPeriod" class="form-control" placeholder="27.3 Earth Days">
+                <input asp-for="OrbitalPeriod" class="form-control" placeholder="27.3 days">
                 <span asp-validation-for="OrbitalPeriod" class="small text-danger"></span>
             </div>
             <div class="form-group">
@@ -58,7 +58,7 @@
                 </select>
                 <span asp-validation-for="PlanetId" class="small text-danger"></span>
             </div>
-            <input class="btn btn-primary" type="submit" value="Save" />
+            <input class="btn btn-primary" type="submit" value="Create" />
         </form>
     </div>
 </div>
