Added an option for users to become creators which can create planets

--- a/Project/Views/Planets/All.cshtml
+++ b/Project/Views/Planets/All.cshtml
@@ -40,6 +40,11 @@
     </div>
 </div>
 
+@if (!Model.Planets.Any())
+{
+    <h2 class="text-xl-center">No planets found by the given criteria!</h2>
+}
+
 <div class="row">
     @foreach (var planet in Model.Planets)
     {
