--- a/Project/Views/_ViewImports.cshtml
+++ b/Project/Views/_ViewImports.cshtml
@@ -4,4 +4,5 @@
 @using Project.Models.Home
 @using Project.Models.PlanetarySystems
 @using Project.Models.Moons
+@using Project.Models.Creators
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
