--- a/Project/Views/Home/Index.cshtml
+++ b/Project/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IndexViewModel
 
 @{
-    ViewData["Title"] = "Space Initiatives";
+    ViewBag.Title = "Space Initiatives";
 }
 
 @if (!Model.PlanetarySystems.Any())
