--- a/Project/Views/Planets/Add.cshtml
+++ b/Project/Views/Planets/Add.cshtml
@@ -1,12 +1,12 @@
 ﻿@model AddPlanetFormModel
 
 @{
-    ViewData["Title"] = "Add Planet";
+    ViewBag.Title = "Create Planet";
 }
 
 <div class="row">
     <div class="col-sm-12 offset-lg-2 col-lg8 offset-xl-3 col-xl-6">
-        <h2 class="heading-margin text-center">Create Planet</h2>
+        <h2 class="heading-margin text-center">@ViewBag.Title</h2>
         <form method="post">
             <div class="form-group">
                 <label asp-for="Name"></label>
@@ -58,7 +58,7 @@
                 </select>
                 <span asp-validation-for="PlanetarySystemId" class="small text-danger"></span>
             </div>
-            <input class="btn btn-primary" type="submit" value="Create" />
+            <input class="btn btn-primary mt-3" type="submit" value="Create" />
         </form>
     </div>
 </div>
