Introduced service layer

--- a/Project/Views/Planets/All.cshtml
+++ b/Project/Views/Planets/All.cshtml
@@ -31,8 +31,12 @@
            asp-route-currentPage="@previousPage)"
            asp-route-searchTerm="@Model.SearchTerm"><<</a>
     </div>
+    @{
+        var shouldButtonBeDisabled = Model.CurrentPage == maxPage ||
+                                     !Model.Planets.Any();
+    }
     <div class="col-md-6">
-        <a class="btn btn-primary float-right @(Model.CurrentPage == maxPage ? "disabled" : string.Empty)"
+        <a class="btn btn-primary float-sm-right @(shouldButtonBeDisabled ? "disabled" : string.Empty)" style="margin-top: 10px"
            asp-controller="Planets"
            asp-action="All"
            asp-route-currentPage="@(Model.CurrentPage + 1)"
