--- a/Project/Views/Shared/_Layout.cshtml
+++ b/Project/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Moons" asp-action="Add">Create Moon</a>
-                        </li>
+
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Planets" asp-action="All">All Planet</a>
                         </li>
@@ -44,7 +44,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; @DateTime.UtcNow.Year - Project
+            &copy; @DateTime.UtcNow.Year - Space Initiatives
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
