--- a/Project/Views/Home/Index.cshtml
+++ b/Project/Views/Home/Index.cshtml
@@ -55,16 +55,30 @@
 
 <div class="mb-5"></div>
 
-<div class="jumbotron">
-    <div class="row">
-        <h2 class="col-md-4">
-            @Model.TotalPlanets Planets
-        </h2>
-        <h2 class="col-md-4">
-            @Model.TotalUsers Users
-        </h2>
-        <h2 class="col-md-4">
-            @Model.TotalMisions Misions
-        </h2>
+<div class="row">
+    <div class="col-12 text-center">
+        <button class="btn btn-primary" id="statistics-button">Show Statistics</button>
     </div>
 </div>
+
+<div class="jumbotron d-none" id="statistics">
+    <div class="row">
+        <h2 class="col-md-4 text-center" id="total-planets"></h2>
+        <h2 class="col-md-4 text-center" id="total-users"></h2>
+        <h2 class="col-md-4 text-center" id="total-missions"></h2>
+    </div>
+</div>
+
+    @section Scripts {
+        <script>
+    $('#statistics-button').on('click', ev => {
+                $.get('/api/statistics', (data) => {
+                    $('#total-planets').text(data.totalPlanets + " Planets");
+                    $('#total-users').text(data.totalUsers + " Users");
+                    $('#total-missions').text(data.totalRents + " Missions");
+
+                    $('#statistics').removeClass('d-none');
+                    $('#statistics-button').hide();
+                });
+            });</script>
+    }
