--- a/Project/Views/Planets/Edit.cshtml
+++ b/Project/Views/Planets/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PlanetFormModel
 
 @{
-    ViewBag.Title = "Create Planet";
+    ViewBag.Title = "Edit Planet";
 }
 
 <partial name="_PlanetFormPartial" model="@Model" /> 
