--- a/Project/Views/_ViewImports.cshtml
+++ b/Project/Views/_ViewImports.cshtml
@@ -1,8 +1,11 @@
 ﻿@using Project
+@using Project.Infrastructure
 @using Project.Models
 @using Project.Models.Planets
 @using Project.Models.Home
 @using Project.Models.PlanetarySystems
 @using Project.Models.Moons
 @using Project.Models.Creators
+@using Project.Services.Planets
+@using Project.Services.Creators
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
