--- a/Project/Views/Shared/_Layout.cshtml
+++ b/Project/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Moons" asp-action="Add">Create Moon</a>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Planets" asp-action="All">All Planet</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Planets" asp-action="All">All Planets</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
