--- a/Project/Views/Shared/_LoginPartial.cshtml
+++ b/Project/Views/Shared/_LoginPartial.cshtml
@@ -1,13 +1,27 @@
 ﻿@using Microsoft.AspNetCore.Identity
+
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
+@inject ICreatorService Creators
 
 <ul class="navbar-nav">
     @if (SignInManager.IsSignedIn(User))
     {
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Creators" asp-action="Become">Become Creator</a>
-        </li>
+        var userId = User.Id();
+        var userIsCreator = Creators.IsCreator(userId);
+
+        @if (userIsCreator)
+        {
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Planets" asp-action="Mine">My Planets</a>
+            </li>
+        }
+        else
+        {
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Creators" asp-action="Become">Become Creator</a>
+            </li>
+        }
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Account</a>
         </li>
