Added administrator role

--- a/Project/Views/Planets/Edit.cshtml
+++ b/Project/Views/Planets/Edit.cshtml
@@ -4,4 +4,8 @@
     ViewBag.Title = "Edit Planet";
 }
 
-<partial name="_PlanetFormPartial" model="@Model" /> 
+<partial name="_PlanetFormPartial" model="@Model" />
+
+@section Scripts{
+    <partial name="_ValidationScriptsPartial" />
+}
