--- a/Project/Views/Creators/Become.cshtml
+++ b/Project/Views/Creators/Become.cshtml
@@ -1,6 +1,6 @@
 ﻿@model BecomeCreatorFormModel
 
-@{ 
+@{
     ViewBag.Title = "Become Creator";
 }
 
@@ -18,3 +18,7 @@
         </form>
     </div>
 </div>
+
+@section Scripts{
+    <partial name="_ValidationScriptsPartial" />
+}
