--- a/Project/Views/Planets/_PlanetsPartial.cshtml
+++ b/Project/Views/Planets/_PlanetsPartial.cshtml
@@ -9,7 +9,7 @@
                 <div class="card-body">
                     <h5 class="card-title">@planet.Name (@planet.PlanetarySystemName)</h5>
                     <a asp-controller="Planets" asp-action="Details" asp-route-id="@planet.Id" class="btn btn-primary">View</a>
-                    @if (ViewBag.AllowPlanetEdit == true)
+                    @if (ViewBag.AllowPlanetEdit == true || User.IsAdmin())
                     {
                     <a asp-controller="Planets" asp-action="Edit" asp-route-id="@planet.Id" class="btn btn-warning">Eddit</a>
                     <a asp-controller="Planets" asp-action="Delete" asp-route-id="@planet.Id" class="btn btn-danger">Delete</a>
