--- a/Project/Views/Moons/Edit.cshtml
+++ b/Project/Views/Moons/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MoonFormModel
 
 @{
-    ViewBag.Title = "Create Moon";
+    ViewBag.Title = "Edit Moon";
 }
 
 <partial name="_MoonFormPartial" model="@Model" />
