--- a/Project/Views/_ViewImports.cshtml
+++ b/Project/Views/_ViewImports.cshtml
@@ -7,6 +7,7 @@
 @using Project.Models.Moons
 @using Project.Models.Creators
 @using Project.Services.Planets
+@using Project.Services.Moons
 @using Project.Services.Creators
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
