--- a/Project/Views/_ViewImports.cshtml
+++ b/Project/Views/_ViewImports.cshtml
@@ -6,8 +6,8 @@
 @using Project.Models.PlanetarySystems
 @using Project.Models.Moons
 @using Project.Models.Creators
-@using Project.Services.Planets
-@using Project.Services.Moons
+@using Project.Services.Planets.Models
+@using Project.Services.Moons.Models
 @using Project.Services.Creators
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
