Added minerals features

--- a/Project/Views/Planets/_PlanetsPartial.cshtml
+++ b/Project/Views/Planets/_PlanetsPartial.cshtml
@@ -14,6 +14,7 @@
                         <a asp-controller="Planets" asp-action="Edit" asp-route-id="@planet.Id" class="btn btn-warning">Eddit</a>
                         <a asp-controller="Planets" asp-action="Delete" asp-route-id="@planet.Id" class="btn btn-danger">Delete</a>
                         <a class="nav-link text-dark" asp-area="" asp-controller="Moons" asp-action="Add">Add Moon</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Minerals" asp-action="Add">Add Minerals</a>
                     }
                 </div>
             </div>
