--- a/Project/Views/_ViewImports.cshtml
+++ b/Project/Views/_ViewImports.cshtml
@@ -9,5 +9,6 @@
 @using Project.Services.Planets.Models
 @using Project.Services.Moons.Models
 @using Project.Services.Creators
+@using Project.Models.Minerals
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
