--- a/Project/Views/Home/Index.cshtml
+++ b/Project/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@
             <div class="carousel-item @(i == 0 ? "active" : string.Empty)">
                 <img class="d-block w-100" src="@planet.ImageUrl" alt="@planet.Name">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5><a class="btn btn-primary" asp-controller="Cars" asp-action="Details" asp-route-id="@planet.Id">@planet.Name</a></h5>
+                    <h5><a class="btn btn-primary" asp-controller="Planets" asp-action="Details" asp-route-id="@planet.Id">@planet.Name</a></h5>
                 </div>
             </div>
         }
@@ -75,7 +75,7 @@
                 $.get('/api/statistics', (data) => {
                     $('#total-planets').text(data.totalPlanets + " Planets");
                     $('#total-users').text(data.totalUsers + " Users");
-                    $('#total-missions').text(data.totalRents + " Missions");
+                    $('#total-missions').text(data.totalMissions + " Missions");
 
                     $('#statistics').removeClass('d-none');
                     $('#statistics-button').hide();
