--- a/Project/Views/Planets/_PlanetsPartial.cshtml
+++ b/Project/Views/Planets/_PlanetsPartial.cshtml
@@ -8,13 +8,16 @@
                 <img class="card-img-top" src="@planet.ImageUrl" alt="@planet.Name @planet.PlanetarySystemName">
                 <div class="card-body">
                     <h5 class="card-title">@planet.Name (@planet.PlanetarySystemName)</h5>
-                    <a asp-controller="Moons" asp-action="All" asp-route-id="@planet.Id" class="btn btn-primary">View</a>
+                    <a asp-controller="Planets" asp-action="Details" asp-route-id="@planet.Id" asp-route-information="@planet.GetInformation()" class="btn btn-primary">View</a>
                     @if (ViewBag.AllowPlanetEdit == true || User.IsAdmin())
                     {
                         <a asp-controller="Planets" asp-action="Edit" asp-route-id="@planet.Id" class="btn btn-warning">Eddit</a>
                         <a asp-controller="Planets" asp-action="Delete" asp-route-id="@planet.Id" class="btn btn-danger">Delete</a>
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Moons" asp-action="Add">Add Moon</a>
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Minerals" asp-action="Add">Add Minerals</a>
+                        if (!User.IsAdmin())
+                        {
+                            <a class="btn btn-info" asp-area="" asp-controller="Moons" asp-action="Add">Add Moon</a>
+                            <a class="btn btn-info" asp-area="" asp-controller="Minerals" asp-action="Add">Add Minerals</a>
+                        }
                     }
                 </div>
             </div>
