--- a/Project/Views/Home/Index.cshtml
+++ b/Project/Views/Home/Index.cshtml
@@ -6,26 +6,28 @@
 
 @if (!Model.PlanetarySystems.Any())
 {
-    <div class="jumbotron">
-        <h1 class="display-4">Welcome to Space Initiative!</h1>
-        <p class="lead">There are no Planetary Systems, you may create one!</p>
-        <hr class="my-4">
-        <p class="lead">
-            <a asp-controller="PlanetarySystems" asp-action="Add" class="btn btn-primary btn-lg" role="button">Create Planetary System</a>
-        </p>
-    </div>
+<div class="jumbotron">
+    <h1 class="display-4">Welcome to Space Initiative!</h1>
+    <h4 class="heading-margin text-left">Tutorial 1: First you need to create Planetary System after that you can make Planets and you may add some Moons and Minerals to them.</h4>
+    <p class="lead">There are no Planetary Systems, you may create one!</p>
+    <hr class="my-4">
+    <p class="lead">
+        <a asp-controller="PlanetarySystems" asp-action="Add" class="btn btn-primary btn-lg" role="button">Create Planetary System</a>
+    </p>
+</div>
 }
 
 @if (Model.PlanetarySystems.Any() && !Model.Planets.Any())
 {
-    <div class="jumbotron">
-        <h1 class="display-4">Welcome to Space Initiative!</h1>
-        <p class="lead">There are no Planets in the Planetary System, you may create one!</p>
-        <hr class="my-4">
-        <p class="lead">
-            <a asp-controller="Planets" asp-action="Add" class="btn btn-primary btn-lg" role="button">Create Planet</a>
-        </p>
-    </div>
+<div class="jumbotron">
+    <h1 class="display-4">Welcome to Space Initiative!</h1>
+    <h4 class="heading-margin text-left">Tutorial 2: Good Job! Now you can create Planet and add Moons and Minerals to it. </h4>
+    <p class="lead">There are no Planets in the Planetary System, you may create one!</p>
+    <hr class="my-4">
+    <p class="lead">
+        <a asp-controller="Planets" asp-action="Add" class="btn btn-primary btn-lg" role="button">Create Planet</a>
+    </p>
+</div>
 }
 
 <div class="mb-5"></div>
