Added delete functions and creators avatars

--- a/Project/Views/Creators/Become.cshtml
+++ b/Project/Views/Creators/Become.cshtml
@@ -1,8 +1,6 @@
 ﻿@model BecomeCreatorFormModel
 
-@{
-    ViewBag.Title = "Become Creator";
-}
+@{ ViewBag.Title = "Become Creator"; }
 
 <div class="row">
     <div class="col-sm-12 offset-lg-2 col-lg8 offset-xl-3 col-xl-6">
@@ -10,14 +8,49 @@
         <form method="post">
             <div class="form-group">
                 <label asp-for="Name"></label>
-                <input asp-for="Name" class="form-control" placeholder="Kamen Raykov">
+                <input asp-for="Name" class="form-control" placeholder="Perun">
                 <span asp-validation-for="Name" class="small text-danger"></span>
             </div>
-
-            <input class="btn btn-primary mt-3" type="submit" value="Become" />
+            <h4 class="heading-margin text-center">Chose Avatar</h4>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="card mb-6">
+                        <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/4/46/Perun_Gromoverzhecz_by_Andrey_Shishkin.jpg">
+                        <div class="card-body">
+                            <input class="btn btn-primary mt-6" type="submit" value="Become" />
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card mb-6">
+                        <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/d/dd/Veles_by_Andrey_Shishkin.jpg">
+                        <div class="card-body">
+                            <input class="btn btn-primary mt-6" type="submit" value="Become" />
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card mb-6">
+                        <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/6/68/Dazhbog_by_Andrey_Shishkin.jpg">
+                        <div class="card-body">
+                            <input class="btn btn-primary mt-6" type="submit" value="Become" />
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card mb-6">
+                        <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Yarilo_by_Andrey_Shishkin.jpg/800px-Yarilo_by_Andrey_Shishkin.jpg">
+                        <div class="card-body">
+                            <input class="btn btn-primary mt-6" type="submit" value="Become" />
+                        </div>
+                    </div>
+                </div>
+            </div>
         </form>
     </div>
 </div>
+
+    
 
 @section Scripts{
     <partial name="_ValidationScriptsPartial" />
