--- a/Project/Views/Shared/_LoginPartial.cshtml
+++ b/Project/Views/Shared/_LoginPartial.cshtml
@@ -32,6 +32,9 @@
             <li class="nav-item">
                 <a class="nav-link text-dark" asp-area="Admin" asp-controller="Moons" asp-action="All">Moon Administration</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="Admin" asp-controller="PlanetarySystems" asp-action="All">Planetary System Administration</a>
+            </li>
         }
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Account</a>
