--- a/Project/Views/_ViewImports.cshtml
+++ b/Project/Views/_ViewImports.cshtml
@@ -10,5 +10,6 @@
 @using Project.Services.Moons.Models
 @using Project.Services.Creators
 @using Project.Models.Minerals
+@using Project.Services.Minerals.Models
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
