--- a/Project/Views/Home/Index.cshtml
+++ b/Project/Views/Home/Index.cshtml
@@ -39,8 +39,7 @@
             var planet = Model.Planets[i];
             <div class="carousel-item @(i == 0 ? "active" : string.Empty)">
                 <img class="d-block w-100" src="@planet.ImageUrl" alt="@planet.Name">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5><a asp-controller="Planets" asp-action="Details" asp-route-id="@planet.Id" asp-route-information="@planet.GetInformation()" class="btn btn-primary">View</a></h5>
+                <div class="carousel-caption d-none d-md-block">                  
                 </div>
             </div>
          }
@@ -67,7 +66,7 @@
     <div class="row">
         <h2 class="col-md-4 text-center" id="total-planets"></h2>
         <h2 class="col-md-4 text-center" id="total-users"></h2>
-        <h2 class="col-md-4 text-center" id="total-satellites"></h2>
+        <h2 class="col-md-4 text-center" id="total-minerals"></h2>
     </div>
 </div>
 
@@ -77,7 +76,7 @@
                 $.get('/api/statistics', (data) => {
                     $('#total-planets').text(data.totalPlanets + " Planets");
                     $('#total-users').text(data.totalUsers + " Users");
-                    $('#total-satellites').text(data.totalSatellites + " Satellites");
+                    $('#total-minerals').text(data.totalMinerals + " Minerals");
                     $('#statistics').removeClass('d-none');
                     $('#statistics-button').hide();
                 });
