--- a/Project/Views/Minerals/Mine.cshtml
+++ b/Project/Views/Minerals/Mine.cshtml
@@ -2,13 +2,23 @@
 
 @{ ViewBag.Title = "Mine Minerals"; }
 
-<div class="row">
-    @foreach (var mineral in Model)
-    {
+<h1>Mine Minerals</h1>
 
-        <h2>@mineral.PlanetName:</h2>
-        <div class="col-md-2">
-        <a asp-controller="Minerals" asp-action="Delete" asp-route-id="@mineral.Id" class="btn btn-danger">Mine Minerals</a>
-        </div>    
-     }
-</div>
+<table class="table table-dark">
+    <thead class="thead-dark">
+        <tr>
+            <th scope="col">Planet Name</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var mineral in Model)
+        {
+        <tr>
+            <td scope="col">@mineral.PlanetName</td>\
+            <td scope="col">
+                <a asp-controller="Minerals" asp-action="Delete" asp-route-id="@mineral.Id" class="btn btn-danger float-right ml-3">Mine Mineral</a>
+            </td>
+        </tr>
+         }
+    </tbody>
+</table>
