--- a/Project/Views/Shared/_LoginPartial.cshtml
+++ b/Project/Views/Shared/_LoginPartial.cshtml
@@ -17,6 +17,9 @@
             <li class="nav-item">
                 <a class="nav-link text-dark" asp-area="" asp-controller="Planets" asp-action="Mine">My Planets</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Moons" asp-action="Mine">My Moons</a>
+            </li>
         }
         else if (!userIsAdmin)
         {
