--- a/Project/Views/Moons/Add.cshtml
+++ b/Project/Views/Moons/Add.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MoonFormModel
 
 @{
-    ViewBag.Title = "Create Moon";
+    ViewBag.Title = "Add Moon";
 }
 
 <partial name="_MoonFormPartial" model="@Model" />
