--- a/Project/Views/Moons/Details.cshtml
+++ b/Project/Views/Moons/Details.cshtml
@@ -24,5 +24,8 @@
 
     <dt class="col-sm-3">Planet:</dt>
     <dd class="col-sm-9">@Model.PlanetName</dd>
+
+    <dt class="col-sm-3">Total Minerals:</dt>
+    <dd class="col-sm-9">@Model.Minerals.Count()</dd>
 </dl>
 <img class="card-img-top" src="@Model.ImageUrl">
